# Flamapp-AI

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/flappai/: MainActivity.kt
app/src/main/java/com/example/flappai/camera/: CameraController.kt  FrameData.kt
app/src/main/java/com/example/flappai/nativebridge/: NativeBridge.kt
app/src/main/java/com/example/flappai/ui/: ProcessedFrameSurfaceView.kt
app/src/main/res/drawable/: permission_bg.xml  stats_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gl/: build.gradle  consumer-rules.pro
gl/src/main/java/com/example/flappai/gl/: ProcessedFrameRenderer.kt
gl/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
jni/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp
jni/include/: opencv_processor.hpp
web/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
web/src/: main.ts
